--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 <body>
     <nav>
-        <a href="">Home</a>
-        <a href="">About</a>
-        <a href="">Menu</a>
+        <a href="#First_Section">Home</a>
+        <a href="#Third_Section">About</a>
+        <a href="#menu">Menu</a>
         <img src="logo.png" alt="">
-        <a href="">Blog</a>
-        <a href="">Shop</a>
-        <a href="">Contact</a>
+        <a href="#blog">Blog</a>
+        <a href="#shop">Shop</a>
+        <a href="#Contact">Contact</a>
     </nav>
     <section class="First_Section" id="First_Section">
         <img src="shape1.png" alt="shape1.png">
@@ -64,7 +64,7 @@
             </p>
         </div>
     </section>
-    <section class="Third_Section" id="Third_Section">
+    <section class="Third_Section" id="Third_Section" >
         <img src="Shape4.png" alt="shape1.png">
         <div class="Third_Section-Second-Div-img  Width-50vw">
             <img src="Image.png" alt="" class="images">
@@ -83,7 +83,7 @@
         </div>
 
     </section>
-    <section class="Section-Fourth">
+    <section class="Section-Fourth" id="menu">
         <div class="first-fourth">
             <h1>Menu</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati illo, nobis itaque reiciendis tempora
@@ -142,7 +142,7 @@
             </div>
         </div>
     </section>
-    <section class="Fifth_Section">
+    <section class="Fifth_Section" id="shop">
         <img src="Shape2.png" alt="" class="Fifth">
         <div class="first-fourth ">
             <h1>Store
@@ -189,7 +189,7 @@
             </div>
         </div>
     </section>
-    <section class="Sixth-Section" id="Sixth-Section">
+    <section class="Sixth-Section" id="Sixth-Section" id="blog">
         <div class="video">
             <video src="video-devices-in.m4v" id="video"></video>
             <!-- <div class="play" id="play1">ayan</div> -->
@@ -203,7 +203,7 @@
         </div>
         
     </section>
-    <section class="seven">
+    <section class="seven" id="Contact">
         <img src="shape4.png" alt="">
         <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3342.02092523097!2d76.68021256024721!3d12.325161478073523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2s!5e0!3m2!1sta!2sin!4v1731136689674!5m2!1sta!2sin"  style="border:0;" allowfullscreen="" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <div class="ConactUs same">
