--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     </section>
     <section class="Section-Fourth" id="menu">
-        <div class="first-fourth">
+        <div class="first-fourth Width-50vw ">
             <h1>Menu</h1>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati illo, nobis itaque reiciendis tempora
                 quasi? Consectetur nisi veritatis suscipit eos?</p>
@@ -144,7 +144,7 @@
     </section>
     <section class="Fifth_Section" id="shop">
         <img src="Shape2.png" alt="" class="Fifth">
-        <div class="first-fourth ">
+        <div class="first-fourth Width-50vw">
             <h1>Store
             </h1>
             <p>Neque laoreet suspendisse interdum consectetur libero id faucibus nisl tincidunt. Dictum
