--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section class="Third_Section" id="Third_Section" >
-        <img src="Shape4.png" alt="shape1.png">
+        <img src="Shape4.png" alt="">
         <div class="Third_Section-Second-Div-img  Width-50vw">
             <img src="Image.png" alt="" class="images">
         </div>
